Styles: Updated contrast color issues.

--- a/src/styles/GeneralPostPage.module.css
+++ b/src/styles/GeneralPostPage.module.css
@@ -39,7 +39,7 @@
 
 .Tags {
   background-color: #a3b18a !important;
-  color: white !important;
+  color: #094125 !important;
   cursor: pointer;
   padding: 5px 10px;
   border-radius: 12px;
