--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -15,8 +15,8 @@
   margin-bottom: 15px;
   margin-right: 2px;
   margin-left: 2px;
-  background-color: #A3B18A; 
-  border-color: #A3B18A;
+  background-color: #094125; 
+  border-color: #094125;
   border-width: 1px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
@@ -63,4 +63,10 @@
 
 .GithubIcon {
   color: #3e4b57;
+}
+
+.HomeContainer {
+  padding: 20px;
+  border-radius: 10px;
+  color: #094125;
 }
